[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Stive.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/levelsScripts/LevelTestes3.gd" type="Script" id=5]

[node name="LevelTestes3" type="Node2D"]
script = ExtResource( 5 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 21.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Score: 0"

[node name="ZombiConunt" type="Label" parent="."]
margin_left = 6.0
margin_top = 17.0
margin_right = 63.0
margin_bottom = 31.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Zumbi: 0"

[node name="ZombiConunt2" type="Label" parent="."]
margin_left = 4.0
margin_top = 309.0
margin_right = 348.0
margin_bottom = 323.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Zumbi: 0"
align = 1

[node name="Stive" parent="." instance=ExtResource( 1 )]

[node name="ZombieSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TurnIntervalTimer" type="Timer" parent="."]

[connection signal="timeout" from="TurnIntervalTimer" to="." method="_on_TurnIntervalTimer_timeout"]
